Added v3 Truck endpoint and reenabled Jackson object mapper module
